Fix footer and main alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
 }
 
 header {
-    width: 100vw;
+    /* width: 100vw; */
 }
 
 main {
@@ -67,7 +67,7 @@ footer a {
         align-items: center;
         justify-content: center;
         height: auto;
-        padding: 1rem;
+        padding: 1rem 0;
         margin-bottom: 2rem;
     }
     
@@ -81,7 +81,7 @@ footer a {
         display: flex;
         align-items: center;
         justify-content: center;
-        padding: 1rem;
+        padding: 1rem 0;
         margin-bottom: 2rem;
     }
 
@@ -95,7 +95,7 @@ footer a {
         max-width: 1200px;
         display: flex;
         justify-content: flex-start;
-        padding: 1rem;
+        padding: 1rem 0;
         margin-bottom: 2rem;
     }
 }
